--- a/requirements.txt
+++ b/requirements.txt
@@ -1,197 +1,175 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-_openmp_mutex=5.1=1_gnu
-absl-py=1.3.0=pypi_0
-aido-protocols-daffy=6.0.59=pypi_0
-asttokens=2.1.0=pypi_0
-attrs=22.1.0=pypi_0
-backcall=0.2.0=pypi_0
-base58=1.0.3=pypi_0
-beautifulsoup4=4.7.1=pypi_0
-ca-certificates=2022.10.11=h06a4308_0
-cachecontrol=0.12.11=pypi_0
-cachetools=5.2.0=pypi_0
-cachy=0.3.0=pypi_0
-carnivalmirror=0.6.2=pypi_0
-cbor2=5.4.3=pypi_0
-certifi=2022.9.24=py38h06a4308_0
-cffi=1.15.1=pypi_0
-charset-normalizer=2.1.1=pypi_0
-cleo=1.0.0a5=pypi_0
-click=8.1.3=pypi_0
-cloudpickle=1.2.2=pypi_0
-coloredlogs=15.0.1=pypi_0
-contourpy=1.0.6=pypi_0
-coverage=6.5.0=pypi_0
-crashtest=0.3.1=pypi_0
-cryptography=38.0.3=pypi_0
-cycler=0.11.0=pypi_0
-dataclasses-json=0.5.7=pypi_0
-decorator=5.1.1=pypi_0
-distlib=0.3.6=pypi_0
-docker-pycreds=0.4.0=pypi_0
-duckietown-serialization-ds1=1.0.20=pypi_0
-duckietown-slimremote=2018.10.1=pypi_0
-duckietown-world-daffy=6.2.39=pypi_0
-dulwich=0.20.50=pypi_0
-executing=1.2.0=pypi_0
-filelock=3.8.0=pypi_0
-fonttools=4.38.0=pypi_0
-freetype-py=2.3.0=pypi_0
-frozendict=2.3.4=pypi_0
-future=0.18.2=pypi_0
-gitdb=4.0.9=pypi_0
-gitpython=3.1.29=pypi_0
-gltflib=1.0.13=pypi_0
-google-auth=2.14.1=pypi_0
-google-auth-oauthlib=0.4.6=pypi_0
-grpcio=1.50.0=pypi_0
-gym=0.15.4=pypi_0
-gym-duckietown-agent=2018.10.1=pypi_0
-gym-notices=0.0.8=pypi_0
-html5lib=1.1=pypi_0
-humanfriendly=10.0=pypi_0
-hyperdash=0.15.3=pypi_0
-idna=3.4=pypi_0
-imageio=2.22.4=pypi_0
-importlib-metadata=4.13.0=pypi_0
-importlib-resources=5.10.0=pypi_0
-ipython=8.6.0=pypi_0
-jaraco-classes=3.2.3=pypi_0
-jedi=0.18.1=pypi_0
-jeepney=0.8.0=pypi_0
-jpeg4py=0.1.4=pypi_0
-jsonschema=4.17.0=pypi_0
-keyring=23.11.0=pypi_0
-kiwisolver=1.4.4=pypi_0
-ld_impl_linux-64=2.38=h1181459_1
-libffi=3.4.2=h295c915_4
-libgcc-ng=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-libstdcxx-ng=11.2.0=h1234567_1
-lockfile=0.12.2=pypi_0
-lxml=4.9.1=pypi_0
-markdown=3.4.1=pypi_0
-markupsafe=2.1.1=pypi_0
-marshmallow=3.19.0=pypi_0
-marshmallow-enum=1.5.1=pypi_0
-matplotlib=3.6.2=pypi_0
-matplotlib-inline=0.1.6=pypi_0
-more-itertools=9.0.0=pypi_0
-morphys=1.0=pypi_0
-msgpack=1.0.4=pypi_0
-mypy-extensions=0.4.3=pypi_0
-ncurses=6.3=h5eee18b_3
-networkx=2.8.8=pypi_0
-nose=1.3.7=pypi_0
-numpy=1.23.4=pypi_0
-nvidia-cublas-cu11=11.10.3.66=pypi_0
-nvidia-cuda-nvrtc-cu11=11.7.99=pypi_0
-nvidia-cuda-runtime-cu11=11.7.99=pypi_0
-nvidia-cudnn-cu11=8.5.0.96=pypi_0
-oauthlib=3.2.2=pypi_0
-opencv-python=4.6.0.66=pypi_0
-openssl=1.1.1s=h7f8727e_0
-oyaml=1.0=pypi_0
-packaging=21.3=pypi_0
-pandas=1.5.1=pypi_0
-parso=0.8.3=pypi_0
-pathtools=0.1.2=pypi_0
-pexpect=4.8.0=pypi_0
-pickleshare=0.7.5=pypi_0
-pillow=9.3.0=pypi_0
-pip=22.3.1=pypi_0
-pkginfo=1.8.3=pypi_0
-pkgutil-resolve-name=1.3.10=pypi_0
-platformdirs=2.5.4=pypi_0
-plotly=5.11.0=pypi_0
-poetry=1.2.2=pypi_0
-poetry-core=1.3.2=pypi_0
-poetry-plugin-export=1.2.0=pypi_0
-promise=2.3=pypi_0
-prompt-toolkit=3.0.32=pypi_0
-protobuf=3.20.3=pypi_0
-psutil=5.9.4=pypi_0
-ptyprocess=0.7.0=pypi_0
-pure-eval=0.2.2=pypi_0
-py-cid=0.3.0=pypi_0
-py-multibase=1.0.3=pypi_0
-py-multicodec=0.2.1=pypi_0
-py-multihash=0.2.3=pypi_0
-pyasn1=0.4.8=pypi_0
-pyasn1-modules=0.2.8=pypi_0
-pybase64=1.2.3=pypi_0
-pycontracts3=3.0.2=pypi_0
-pycparser=2.21=pypi_0
-pygeometry-z6=2.1.4=pypi_0
-pyglet=1.3.2=pypi_0
-pygments=2.13.0=pypi_0
-pylev=1.4.0=pypi_0
-pyopengl=3.1.0=pypi_0
-pyparsing=3.0.9=pypi_0
-pyrender=0.1.45=pypi_0
-pyrsistent=0.19.2=pypi_0
-python=3.8.15=h3fd9d12_0
-python-baseconv=1.2.2=pypi_0
-python-dateutil=2.8.2=pypi_0
-python-slugify=6.1.2=pypi_0
-pytz=2022.6=pypi_0
-pywavelets=1.4.1=pypi_0
-pyyaml=6.0=pypi_0
-pyzmq=24.0.1=pypi_0
-readline=8.2=h5eee18b_0
-requests=2.28.1=pypi_0
-requests-oauthlib=1.3.1=pypi_0
-requests-toolbelt=0.9.1=pypi_0
-rsa=4.9=pypi_0
-scikit-image=0.19.3=pypi_0
-scipy=1.9.3=pypi_0
-secretstorage=3.3.3=pypi_0
-sentry-sdk=1.11.0=pypi_0
-setproctitle=1.3.2=pypi_0
-setuptools=65.5.1=pypi_0
-shellingham=1.5.0=pypi_0
-shortuuid=1.0.11=pypi_0
-six=1.16.0=pypi_0
-sklearn=0.0.post1=pypi_0
-smmap=5.0.0=pypi_0
-soupsieve=2.3.2.post1=pypi_0
-sqlite=3.39.3=h5082296_0
-stable-baselines3=1.6.2=pypi_0
-stack-data=0.6.1=pypi_0
-svgwrite=1.4.3=pypi_0
-tenacity=8.1.0=pypi_0
-tensorboard=2.11.0=pypi_0
-tensorboard-data-server=0.6.1=pypi_0
-tensorboard-plugin-wit=1.8.1=pypi_0
-termcolor=2.1.0=pypi_0
-text-unidecode=1.3=pypi_0
-tifffile=2022.10.10=pypi_0
-tk=8.6.12=h1ccaba5_0
-tomlkit=0.11.6=pypi_0
-torch=1.13.0=pypi_0
-tqdm=4.64.1=pypi_0
-traitlets=5.5.0=pypi_0
-trimesh=3.16.4=pypi_0
-typing-extensions=4.4.0=pypi_0
-typing-inspect=0.8.0=pypi_0
-urllib3=1.26.12=pypi_0
-validate-email=1.3=pypi_0
-varint=1.0.2=pypi_0
-virtualenv=20.16.7=pypi_0
-wandb=0.13.5=pypi_0
-wcwidth=0.2.5=pypi_0
-webcolors=1.12=pypi_0
-webencodings=0.5.1=pypi_0
-werkzeug=2.2.2=pypi_0
-wheel=0.38.4=pypi_0
-xtermcolor=1.3=pypi_0
-xz=5.2.6=h5eee18b_0
-zipp=3.10.0=pypi_0
-zlib=1.2.13=h5eee18b_0
-zuper-commons-z6=6.2.4=pypi_0
-zuper-ipce-z6=6.1.2=pypi_0
-zuper-nodes-z6=6.2.13=pypi_0
-zuper-typing-z6=6.2.3=pypi_0
+absl-py==1.3.0
+aido-protocols-daffy==6.0.59
+asttokens==2.1.0
+attrs==22.1.0
+backcall==0.2.0
+base58==1.0.3
+beautifulsoup4==4.7.1
+CacheControl==0.12.11
+cachetools==5.2.0
+cachy==0.3.0
+carnivalmirror==0.6.2
+cbor2==5.4.3
+certifi @ file:///croot/certifi_1665076670883/work/certifi
+cffi==1.15.1
+charset-normalizer==2.1.1
+cleo==1.0.0a5
+click==8.1.3
+cloudpickle==1.2.2
+coloredlogs==15.0.1
+contourpy==1.0.6
+coverage==6.5.0
+crashtest==0.3.1
+cryptography==38.0.3
+cycler==0.11.0
+dataclasses-json==0.5.7
+decorator==5.1.1
+distlib==0.3.6
+docker-pycreds==0.4.0
+duckietown-serialization-ds1==1.0.20
+duckietown-slimremote==2018.10.1
+duckietown-world-daffy==6.2.39
+dulwich==0.20.50
+executing==1.2.0
+filelock==3.8.0
+fonttools==4.38.0
+freetype-py==2.3.0
+frozendict==2.3.4
+future==0.18.2
+gitdb==4.0.9
+GitPython==3.1.29
+gltflib==1.0.13
+google-auth==2.14.1
+google-auth-oauthlib==0.4.6
+grpcio==1.50.0
+gym==0.15.4
+gym-duckietown-agent==2018.10.1
+gym-notices==0.0.8
+html5lib==1.1
+humanfriendly==10.0
+hyperdash==0.15.3
+idna==3.4
+imageio==2.22.4
+importlib-metadata==4.13.0
+importlib-resources==5.10.0
+ipython==8.6.0
+jaraco.classes==3.2.3
+jedi==0.18.1
+jeepney==0.8.0
+jpeg4py==0.1.4
+jsonschema==4.17.0
+keyring==23.11.0
+kiwisolver==1.4.4
+lockfile==0.12.2
+lxml==4.9.1
+Markdown==3.4.1
+MarkupSafe==2.1.1
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+more-itertools==9.0.0
+morphys==1.0
+msgpack==1.0.4
+mypy-extensions==0.4.3
+networkx==2.8.8
+nose==1.3.7
+numpy==1.23.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+oauthlib==3.2.2
+opencv-python==4.6.0.66
+oyaml==1.0
+packaging==21.3
+pandas==1.5.1
+parso==0.8.3
+pathtools==0.1.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.3.0
+pkginfo==1.8.3
+pkgutil_resolve_name==1.3.10
+platformdirs==2.5.4
+plotly==5.11.0
+poetry==1.2.2
+poetry-core==1.3.2
+poetry-plugin-export==1.2.0
+promise==2.3
+prompt-toolkit==3.0.32
+protobuf==3.20.3
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py-cid==0.3.0
+py-multibase==1.0.3
+py-multicodec==0.2.1
+py-multihash==0.2.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybase64==1.2.3
+PyContracts3==3.0.2
+pycparser==2.21
+PyGeometry-z6==2.1.4
+pyglet==1.3.2
+Pygments==2.13.0
+pylev==1.4.0
+PyOpenGL==3.1.0
+pyparsing==3.0.9
+pyrender==0.1.45
+pyrsistent==0.19.2
+python-baseconv==1.2.2
+python-dateutil==2.8.2
+python-slugify==6.1.2
+pytz==2022.6
+PyWavelets==1.4.1
+PyYAML==6.0
+pyzmq==24.0.1
+requests==2.28.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+rsa==4.9
+scikit-image==0.19.3
+scipy==1.9.3
+SecretStorage==3.3.3
+sentry-sdk==1.11.0
+setproctitle==1.3.2
+shellingham==1.5.0
+shortuuid==1.0.11
+six==1.16.0
+sklearn==0.0.post1
+smmap==5.0.0
+soupsieve==2.3.2.post1
+stable-baselines3==1.6.2
+stack-data==0.6.1
+svgwrite==1.4.3
+tenacity==8.1.0
+tensorboard==2.11.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+termcolor==2.1.0
+text-unidecode==1.3
+tifffile==2022.10.10
+tomlkit==0.11.6
+torch==1.13.0
+tqdm==4.64.1
+traitlets==5.5.0
+trimesh==3.16.4
+typing-inspect==0.8.0
+typing_extensions==4.4.0
+urllib3==1.26.12
+validate-email==1.3
+varint==1.0.2
+virtualenv==20.16.7
+wandb==0.13.5
+wcwidth==0.2.5
+webcolors==1.12
+webencodings==0.5.1
+Werkzeug==2.2.2
+xtermcolor==1.3
+zipp==3.10.0
+zuper-commons-z6==6.2.4
+zuper-ipce-z6==6.1.2
+zuper-nodes-z6==6.2.13
+zuper-typing-z6==6.2.3
